--- a/package.json
+++ b/package.json
@@ -6,21 +6,59 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.6.0",
+    "@heroicons/react": "^2.1.3",
+    "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.12.1",
+    "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^11.0.28",
+    "highlight.js": "^11.9.0",
+    "microcms-js-sdk": "^3.1.0",
+    "next": "14.2.1",
+    "next-auth": "^5.0.0-beta.16",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "swr": "^2.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@chromatic-com/storybook": "^1.3.2",
+    "@storybook/addon-a11y": "^8.0.8",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/addon-onboarding": "^8.0.8",
+    "@storybook/blocks": "^8.0.8",
+    "@storybook/nextjs": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/test": "^8.0.8",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cheerio": "^0.22.35",
+    "@types/highlightjs": "^9.12.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "eslint-config-next": "14.2.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "next-sitemap": "^4.2.3",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prisma": "^5.12.1",
+    "storybook": "^8.0.8",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
