--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "postbuild": "next-sitemap",
-    "chromatic": "npx chromatic --project-token=chpt_64f578648b7ab7e"
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
