--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "chromatic": "npx chromatic --project-token=<CHROMATIC_PROJECT_TOKEN>"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
@@ -52,7 +53,7 @@
     "@types/react-dom": "^18",
     "chromatic": "^11.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "eslint-config-next": "^14.2.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
